cna/cafe/cafe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee
spec:
  selector:
    matchLabels:
      app: coffee
  replicas: 2
  template:
    metadata:
      labels:
        app: coffee
    spec:
      containers:
        - name: nginx
          image: registry.lab.livefire.dev/vcnlivefire/nginx-hello
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea
spec:
  selector:
    matchLabels:
      app: tea
  replicas: 2
  template:
    metadata:
      labels:
        app: tea
    spec:
      containers:
        - name: nginx
          image: registry.lab.livefire.dev/vcnlivefire/nginx-hello
          ports:
            - containerPort: 80
