cna/cafe/cafe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
spec:
  ingressClassName: avi-lb # required, make sure the ingress class is not None
  rules:
  - host: cafe.tkg.corp.local
    http:
      paths:
      - path: /tea
        pathType: Prefix
        backend:
         service:
          name: tea-svc
          port: 
           number: 80
      - path: /coffee
        pathType: Prefix
        backend:
         service:
          name: coffee-svc
          port: 
           number: 80
